# education_test_task

./: .gitignore  README.md  pyproject.toml
organization/: manage.py
organization/organization/: asgi.py  settings.py  urls.py  wsgi.py
project/organization/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
project/organization/migrations/: 0001_initial.py
project/project/: settings.py  urls.py
