[tool.poetry]
name = "education-test-task"
version = "0.1.0"
description = ""
authors = ["zhukovny <cruvar.zhukov@yandex.ru>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
